--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <title>User Management</title>
     </head>
     <body>
-        <header class="title">
+        <!-- <header class="title">
             <h1 class="title__head">User Manager</h1>
         </header>
         <main class="container">
@@ -114,6 +114,7 @@
                 </div>
             </div>
         </div>
-        <script type="module" src="scripts/main.js"></script>
+        <script type="module" src="scripts/main.js"></script> -->
+        <script src='typescript/main.ts'></script>
     </body>
 </html>
