#8 example literal type

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="styles/main.scss" />
-        <title>User Management</title>
-    </head>
-    <body>
-        <!-- <header class="title">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/main.scss" />
+    <title>User Management</title>
+  </head>
+  <body>
+    <!-- <header class="title">
             <h1 class="title__head">User Manager</h1>
         </header>
         <main class="container">
@@ -115,6 +115,6 @@
             </div>
         </div>
         <script type="module" src="scripts/main.js"></script> -->
-        <script src='typescript/main.ts'></script>
-    </body>
+    <script type="module" src="typescript/main.ts"></script>
+  </body>
 </html>
